--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
         <a href="https://www.instagram.com/invites/contact/?i=1gocszhm36v4q&utm_content=27z067j"><i
             class="fab fa-instagram"></i></a>
         <a href="https://www.facebook.com/prajwal.bandi.1"> <i class="fab fa-Facebook"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="https://twitter.com/prajwal_bandi"><i class="fab fa-twitter"></i></a>
 
       </div>
 
