--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
             <div class="quote2">
               <h1>"You define your own life,Don't let other people write your script...!"</h1><br>
             </div>
-            <h2>With all started In poor and middle class joint
+            <h2>With all started In middle class joint
               family on 14th April 2002 Dasharath Bandi and Renuka Bandi 2nd child named as
               <h1><strong>PRAJWAL BANDI..!</strong></h1>
             </h2>
