--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
               Sharnbasva University." </h2>
             <h3>I came from middle class family, I know the how my mother struggling to serve us.Till now i didn't
               called my mother as Amma bcz my attachment with my sister's.</h3>
-            <h4><strong>free to write me with any info.</strong></h4>
+            <h4><strong>free to write me with any info.<a href=" https://prajwal-bandi.github.io/My-resume/">official website</a></strong></h4>
             </p>
           </div>
         </section>
